# rastOS

./: AGENTS.md  ARCHITECTURE.md  BOOT_SEQUENCE.md  Cargo.toml  README.md  REFERENCES.md
configs/: linux-container.config
docs/: BACKUP.md  BAREMETAL.md  CLOUD_BACKUP.md  LLM_SCHEDULING.md
src/: lib.rs
src/auth/: cli.rs  config.rs  mod.rs
src/backup/: config.rs  mod.rs  snapshot.rs
src/backup/btrfs/: mod.rs
src/backup/cli/: mod.rs
src/backup/encryption/: mod.rs
src/backup/storage/: local.rs  mod.rs  s3.rs
src/backup/tests/: mod.rs
src/container/: mod.rs
src/fs/: btrfs.rs  directory.rs  error.rs  file_ops.rs  metadata.rs  mod.rs  utils.rs
src/installer/: mod.rs
src/kernel/: build.rs  config.rs  error.rs  mod.rs
src/oci/: container.rs  error.rs  mod.rs
src/package/: mod.rs
src/snapshot/: mod.rs
src/system/: mod.rs
tests/: backup_helpers.rs  backup_tests.rs
