[package]
name = "rastos"
version = "0.1.0"
edition = "2024"
description = "A modern, safe implementation of rastOS in Rust"
license = "GPL-3.0-or-later"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/rastos"
readme = "README.md"
keywords = ["linux", "package-manager", "snapshots", "system-installer"]
categories = ["command-line-utilities", "os"]

[features]
default = ["cli"]
cli = ["clap/derive", "console"]

[dev-dependencies]
tempfile = "3.3"
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Logging
pretty_env_logger = "0.5"
simplelog = "0.12"

# CLI and user interaction
clap = { version = "4.4", features = ["derive", "env"], optional = true }
console = { version = "0.15", optional = true }
indicatif = { version = "0.17", features = ["rayon"] }

# System operations
nix = "0.26"
sys-mount = "3.0.1"
users = "0.11"
libc = "0.2"

# Filesystem operations
walkdir = "2.3"
glob = "0.3.0"
tempfile = "3.3"

# Btrfs support
btrfsutil-sys = "1.3.0"
btrfsutil = { version = "0.2.0" }

# OCI Runtime Specification
oci-spec = { version = "0.6", features = ["runtime"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }
toml = "0.9.5"
num_cpus = "1.17.0"

