[package]
name = "rastos"
version = "0.1.0"
edition = "2024"
description = "A modern, safe implementation of rastOS in Rust"
license = "GPL-3.0-or-later"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/rastos"
readme = "README.md"
keywords = ["linux", "package-manager", "snapshots", "system-installer"]
categories = ["command-line-utilities", "os"]

[features]
default = ["cli"]
cli = ["clap/derive", "console"]

# Enable specific storage backends
s3 = ["aws-config", "aws-sdk-s3"]
cloud-storage = ["s3"]  # Meta-feature for all cloud storage backends

[dependencies]
# Core
async-trait = "0.1"
bytes = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Storage
object-store = { version = "0.8", features = ["aws"] }
aws-config = { version = "1.0", optional = true }
aws-sdk-s3 = { version = "1.0", optional = true }

# BTRFS
nix = { version = "0.26", features = ["fs"] }
uuid = { version = "1.4", features = ["v4", "serde"] }

# Encryption
aes-gcm = { version = "0.10", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }
hex-literal = { version = "0.3", optional = true }

# CLI
clap = { version = "4.0", features = ["derive", "env"], optional = true }
console = { version = "0.15", optional = true }
dialoguer = { version = "0.10", optional = true }
indicatif = { version = "0.17", optional = true }
chrono = { version = "0.4", features = ["serde"] }
humansize = { version = "2.1", features = ["impl_style"] }

[dev-dependencies]
tempfile = "3.3"
assert_cmd = "2.0"
predicates = "2.1"
aws-config = { version = "1.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.0" }
assert_fs = "1.0"
tempfile = { version = "3.3", features = ["nightly"] }

[[bin]]
name = "rast-backup"
path = "src/bin/backup.rs"
required-features = ["cli"]

[[bin]]
name = "rast-snapshot"
path = "src/bin/snapshot.rs"
required-features = ["cli"]

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Logging
pretty_env_logger = "0.5"
simplelog = "0.12"

# CLI and user interaction
clap = { version = "4.4", features = ["derive", "env"], optional = true }
console = { version = "0.15", optional = true }
indicatif = { version = "0.17", features = ["rayon"] }

# System operations
nix = "0.26"
sys-mount = "3.0.1"
users = "0.11"
libc = "0.2"

# Filesystem operations
walkdir = "2.3"
glob = "0.3.0"
tempfile = "3.3"

# Btrfs support
btrfsutil-sys = "1.3.0"
btrfsutil = { version = "0.2.0" }

# OCI Runtime Specification
oci-spec = { version = "0.6", features = ["runtime"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }
toml = "0.9.5"
num_cpus = "1.17.0"

